//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto2";

package core.instance;

import "com/sandpolis/core/instance/auth.proto";

option java_package = "com.sandpolis.core.instance";
option optimize_for = CODE_SIZE;

// The configuration for a group.
message GroupConfig {

    // The primary ID
    optional string id = 101;

    // The user-friendly name
    optional string name = 102;

    // The username of the user that owns this group
    optional string owner = 103;

    // The usernames of all group members
    repeated string member = 104;

    // The password mechanisms that belong to the group
    repeated PasswordContainer password_mechanism = 105;

    // The key mechanisms that belong to the group
    repeated KeyContainer key_mechanism = 106;
}
